# bill-rust

attachment-handler/: Cargo.toml  README.md
attachment-handler/src/: agent-response-schema.json  event_handler.rs  prompt.txt
iac/: .gitignore  main.tf  terraform.tf  variables.tf
iac/modules/lambda/: main.tf  outputs.tf  variables.tf
mail-handler/: Cargo.toml  README.md
mail-handler/src/: event_handler.rs
message-handler/: Cargo.toml  README.md
message-handler/src/: event_handler.rs  main.rs
