[package]
name = "attachment-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3"] }
aws-config = "1.8.6"
aws-sdk-bedrockruntime = "1.105.0"
aws-sdk-s3 = "1.104.0"

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
aws-sdk-sqs = "1.83.0"
