[package]
name = "mail-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.6"
aws-sdk-s3 = "1.104.0"
aws-sdk-workmailmessageflow = "1.83.0"

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }

mailparse = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v7"] }
