[package]
name = "message-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }

reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
